--- a/首页.html
+++ b/首页.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>慕课网首页</title>
-    <!--<script src="../bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>-->
-    <link rel="stylesheet" href="../bootstrap-3.3.7-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="CSS/muke.css">
     <script src="JS/mukejs.js"></script>
     <script src="jquery-3.3.1.js"></script>
+
 
 </head>
 <body id="body">
