--- a/首页.html
+++ b/首页.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <title>慕课网首页</title>
-    <!--<script src="../bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>-->
     <link rel="stylesheet" href="CSS/muke.css">
     <script src="JS/mukejs.js"></script>
     <script src="jquery-3.3.1.js"></script>
     <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
+
 
 </head>
 <body id="body">
@@ -52,7 +52,7 @@
             <div id="search-area">
                 <input type="text" id="searcharea">
             </div>
-            <span class="glyphicon glyphicon-search search-button" id="search-button"></span>
+            <span class="glyphicon glyphicon-search search-button" id="search-button" style="top:-16px"></span>
             <div id="qianduanrumen">
                 <a href="#">前端入门</a>
                 <a href="#">Java基础</a>
